<resources>
    <string name="web_client_id">955989260524-sqvqbhvdfpi9118qmbk3orlu80psa7v6.apps.googleusercontent.com</string>

    <string name="app_name">ArFurniture</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_up_msg">Don\'t have an account?<b>Sign Up</b></string>

    <!-- sign up-->

    <string name="sign_up">Sign Up</string>
    <string name="nice_to_see_you_here">Nice to see you here</string>
    <string name="sign_in_msg">Already a user?<b>Sign In</b></string>

    <!-- forgot pass-->
    <string name="forgot_pass">Forgot Password?</string>
    <string name="dont_worry_we_will_help_you_out">Don\'t worry we will help you out</string>
    <string name="click_here_to_recover">Click here to recover</string>
    <string name="go_back_to_login">Go back to <b>Sign In</b></string>
    <!-- home fragment-->

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="best_furniture_for_your_house">Best Furniture For Your House</string>

    <!-- ar -->
    <string translatable="false" name="depth_use_explanation">When Depth is enabled on supported devices, virtual objects adapt to the environment by blending in with the real world.</string>
    <string translatable="false" name="button_text_enable_depth">Enable</string>
    <string translatable="false" name="button_text_disable_depth">Disable</string>
    <string translatable="false" name="options_title_with_depth">Your device supports depth</string>
    <string translatable="false" name="options_title_without_depth">Your device does not support depth</string>
    <string translatable="false" name="done">Done</string>
    <string-array translatable="false" name="depth_options_array">
        <item>Enable depth</item>
        <item>Show depth map</item>
    </string-array>
    <string translatable="false" name="options_title_instant_placement">Instant Placement options</string>
    <string-array translatable="false" name="instant_placement_options_array">
        <item>Enable Instant Placement</item>
    </string-array>

</resources>