<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg">

    <TextView
        android:id="@+id/tv_welcome_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium"
        android:fontFamily="@font/raleway_regular"
        android:text="@string/forgot_pass"
        android:textColor="@color/black"
        android:textSize="@dimen/text_x_large" />

    <TextView
        android:id="@+id/tv_sign_in_to_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_welcome_back"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_x_small"
        android:fontFamily="@font/raleway_regular"
        android:text="@string/dont_worry_we_will_help_you_out"
        android:textColor="@color/grey"
        android:textSize="@dimen/text_x_medium" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_sign_in_to_continue"
        android:layout_alignParentLeft="true"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_150"
        app:cardCornerRadius="10dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tie_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:fontFamily="@font/raleway_medium"
                android:hint="Email" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cv_email"
        android:layout_alignParentLeft="true"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:layout_marginTop="200dp"
        android:background="@drawable/black_card_view"
        android:fontFamily="@font/raleway_medium"
        android:text="@string/click_here_to_recover"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_medium" />


    <TextView
        android:id="@+id/tv_go_to_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_sign_in"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/margin_xxx_large"
        android:fontFamily="@font/raleway_regular"
        android:text="@string/go_back_to_login"
        android:textColor="@color/black"
        android:textSize="@dimen/text_small" />
</RelativeLayout>
